FIX overflowing name / quote not centered

--- a/src/scss/components/_photographer-card.scss
+++ b/src/scss/components/_photographer-card.scss
@@ -42,6 +42,8 @@
     font-size: 3.6rem;
     font-weight: normal;
     color: $text-highlight-primary;
+    margin-left: -100%;
+    margin-right: -100%;
   }
 
   &__description span:not(span:last-of-type) {
@@ -62,6 +64,8 @@
   &__quote {
     font-size: 1rem;
     color: $text-black;
+    margin-left: -100%;
+    margin-right: -100%;
   }
 
   &__rate {
